# axyl-moderation

./: Cargo.toml  axyl_moderation.db  readme.md
migrations/: 20241023000000_initial.sql  20241024000000_initial.sql
src/: bot.rs  commands.rs  config.rs  logging.rs
